# godot-ndi

./: .gdignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  godot-ndi.gdextension
cmake/Modules/: FindNDI.cmake
res/: NDIPlugin.gdnlib  SpoutTexture.gdns  SpoutViewport.gdns  godot-ndi.gdextension  ndi.gdextension  plugin.cfg  plugin.gd
src/: NDIReceiver.cpp  NDIReceiver.hpp  NdiInputStream.cpp  NdiInputStream.hpp  NdiManager.cpp  NdiManager.hpp  NdiReceiver.cpp  NdiReceiver.hpp  NdiSourceFinder.cpp  NdiSourceFinder.hpp  NdiTypeDef.hpp  main.cpp  register_types.cpp  register_types.hpp
